--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Facebook</p>
-               <p>fb.com/abulkalam.noyon.9</p>
+               <p>fb.com/aknoyon97</p>
              </div>
            </li>
            <li>
@@ -126,7 +126,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Twitter</p>
-               <p>twitter.com/Noyon75</p>
+               <p>twitter.com/aknoyon97</p>
              </div>
            </li>
            <li>
